# CareerOS

./: README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_initial_database_layer.py  20260716_0002_add_user_auth_fields.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  companies.py  health.py  jobs.py  router.py
backend/app/core/: cache.py  config.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py  sessions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  agent_log.py  application.py  company.py  email.py  job.py  mixins.py  portfolio.py  recruiter.py  resume.py  user.py
backend/app/repositories/: company.py  job.py
backend/app/schemas/: auth.py  company.py  job.py
backend/app/services/: auth.py  company.py  job.py
backend/tests/: conftest.py  test_auth_security.py  test_company_api.py  test_foundation.py  test_job_api.py  test_redis_integration.py
