[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "passlib>=1.7.4",
    "playwright>=1.61.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.9.1",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
